<resources>
    <string name="app_name">hw_1_calc</string>

    <string name="btn_clear">C</string>
    <string name="btn_number_0">0</string>
    <string name="btn_number_1">1</string>
    <string name="btn_number_2">2</string>
    <string name="btn_number_3">3</string>
    <string name="btn_number_4">4</string>
    <string name="btn_number_5">5</string>
    <string name="btn_number_6">6</string>
    <string name="btn_number_7">7</string>
    <string name="btn_number_8">8</string>
    <string name="btn_number_9">9</string>
    <string name="btn_positive_negative">+/-</string>
    <string name="btn_percent">%</string>
    <string name="btn_dot">.</string>
    <string name="btn_result">=</string>
    <string name="btn_operand_plus">+</string>
    <string name="btn_operand_minus">-</string>
    <string name="btn_operand_division">/</string>
    <string name="btn_operand_multiplication">X</string>

</resources>